--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.security.oauth2.client.provider.keycloak.token-uri=http://localhost:8080/
 spring.security.oauth2.client.provider.keycloak.user-info-uri=http://localhost:8080/realms/intelcom_platform/protocol/openid-connect/userinfo
 spring.security.oauth2.client.provider.keycloak.jwk-set-uri=http://localhost:8080/realms/intelcom_platform/protocol/openid-connect/certs
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
-keycloak.logout-url=http://localhost:8080/realms/intelcom_platform/protocol/openid-connect/logout?redirect_uri=http://localhost:8081
+keycloak.logout-url=http://localhost:8080/realms/intelcom_platform/protocol/openid-connect/logout?redirect_uri=http://localhost:8080/login
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
